--- a/index.html
+++ b/index.html
@@ -34,15 +34,16 @@
                 <h1>About Me</h1>
             </aside>
             <div>
-                <p>Joe Brigantino is a California native from the Monterey Bay area with a catholic upbringing.
-                    During his time at San Diego State University, he came upon faithful believers who shared the Gospel
-                    with him.
+                <p>Joe Brigantino is a California native from the Monterey Bay area with an athletic upbringing.
+                    During his time working after graduating San Diego State University, he realized the passion he had
+                    for efficiency.
                     <br><br>
-                    Joe has known the Josephs throughout his time in the CO ministry. Nicole and Joe knew they wanted to
-                    be a part of the church plant as soon as they heard of it. Now using his gifts of organization and
-                    working with numbers, he has joyfully joined the Center City family and uses his talents as the
-                    Finance Director. You can also catch him on Sunday mornings playing the cajon or guitar for worship
-                    time and hanging out with the youth group as a leader alongside his wife.</p>
+                    Throughout the last few years, Joe learned how deeply he loved learning, and there's no better way to quench the 
+                    thirst than learning to code. Little by little, he started automating parts of a large data integration 
+                    project assigned by his employer, Pacific Coast Academy Charter School. He quickly became the Google Sheets
+                    Guru of the schools' accounting team, and continue to learn. Until he knew he neede more.. Then he stumbled
+                    upon the UCSD Coding Bootcamp and is destined to let his inner nerd show for all the world to see.
+                </p>
             </div>
         </section>
         <section class="work">
@@ -70,11 +71,25 @@
         </section>
         <section class="contact">
             <aside>
-                <!-- Left Side Section Title -->
+                <h1>Contact Me</h1>
             </aside>
             <div>
                 <!-- Right Side Content. Use Unordered List Elements for each project. Flex around. -->
                 <!-- Add profile picture or something -->
+                <ul>
+                    <li>
+                        <a href="tel:831-998-4236">831-998-4236</a>
+                    </li>
+                    <li>
+                        <a href="brigantinojoe71@gmail.com">brigantinojoe71@gmail.com</a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/brigantinojoe">GitHub</a>
+                    </li>
+                    <li>
+                        <a href="https://www.instagram.com/chickenjoeeeee/">Instagram</a>
+                    </li>
+                </ul>
             </div>
         </section>
     </main>
