Add screenshots and update README

--- a/index.html
+++ b/index.html
@@ -17,10 +17,13 @@
             Brigantino
         </h1>
         <div>
-            <p>About Me</p>
+            <a href="#about-me">About Me</a>
+            <a href="#work">Work</a>
+            <a href="#contact">Contact</a>
+            <!-- <p>About Me</p>
             <p>Work</p>
             <p>Contact Me</p>
-            <p>Resume</p>
+            <p>Resume</p> -->
         </div>
     </section>
     <header>
@@ -29,7 +32,7 @@
     </header>
 
     <main>
-        <section class="about-me">
+        <section id="about-me" class="about-me">
             <aside>
                 <h1>About Me</h1>
             </aside>
@@ -38,38 +41,42 @@
                     During his time working after graduating San Diego State University, he realized the passion he had
                     for efficiency.
                     <br><br>
-                    Throughout the last few years, Joe learned how deeply he loved learning, and there's no better way to quench the 
-                    thirst than learning to code. Little by little, he started automating parts of a large data integration 
-                    project assigned by his employer, Pacific Coast Academy Charter School. He quickly became the Google Sheets
-                    Guru of the schools' accounting team, and continue to learn. Until he knew he neede more.. Then he stumbled
+                    Throughout the last few years, Joe learned how deeply he loved learning, and there's no better way
+                    to quench the
+                    thirst than learning to code. Little by little, he started automating parts of a large data
+                    integration
+                    project assigned by his employer, Pacific Coast Academy Charter School. He quickly became the Google
+                    Sheets
+                    Guru of the schools' accounting team, and continue to learn. Until he knew he neede more.. Then he
+                    stumbled
                     upon the UCSD Coding Bootcamp and is destined to let his inner nerd show for all the world to see.
                 </p>
             </div>
         </section>
-        <section class="work">
+        <section id="work" class="work">
             <aside>
                 <h1>Work</h1>
             </aside>
-            <div class="project-container">
+            <div id="project-container" class="project-container">
 
                 <!-- Right Side Content. Use Article Elements for each project -->
-                <article>
-                    <img src="./Assets/images/brick.jpg" alt="">
-                </article>
+                <a href="https://brigantinojoe.github.io/css_cheatsheet/" class="cheatsheet">
+                    <img src="./Assets/images/css_cheatsheet.jpg" alt="CSS Cheatsheet">
+                </a>
                 <!-- Use figcaption -->
                 <div>
                     <!-- Right side content, sub projects -->
-                    <article>
-                        <img src="./Assets/images/brick.jpg" alt="">
-                    </article>
-                    <article>
-                        <img src="./Assets/images/brick.jpg" alt="">
-                    </article>
+                    <a href="https://brigantinojoe.github.io/static_html/">
+                        <img src="./Assets/images/static.jpg" alt="Static HTML Page">
+                    </a>
+                    <a href="https://brigantinojoe.github.io/horiseon/">
+                        <img src="./Assets/images/horiseon.jpg" alt="Horiseon Marketing">
+                    </a>
                 </div>
 
             </div>
         </section>
-        <section class="contact">
+        <section id="contact" class="contact">
             <aside>
                 <h1>Contact Me</h1>
             </aside>
