Add new project

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     integration
                     project assigned by his employer, Pacific Coast Academy Charter School. He quickly became the Google
                     Sheets
-                    Guru of the schools' accounting team, and continue to learn. Until he knew he neede more.. Then he
+                    Guru of the schools' accounting team, and continued to learn. Until he knew he needed more.. Then he
                     stumbled
                     upon the UCSD Coding Bootcamp and is destined to let his inner nerd show for all the world to see.
                 </p>
@@ -60,8 +60,8 @@
             <div id="project-container" class="project-container">
 
                 <!-- Right Side Content. Use Article Elements for each project -->
-                <a href="https://brigantinojoe.github.io/css_cheatsheet/" class="cheatsheet">
-                    <img src="./Assets/images/css_cheatsheet.jpg" alt="CSS Cheatsheet">
+                <a href="https://bibliomania.herokuapp.com/" class="cheatsheet">
+                    <img src="./Assets/images/bibliomania.png" alt="BiblioMania">
                 </a>
                 <!-- Use figcaption -->
                 <div>
